Week4 - AGENTS.md

--- a/week4/frontend/index.html
+++ b/week4/frontend/index.html
@@ -17,6 +17,7 @@
           <input id="note-content" placeholder="Content" required />
           <button type="submit">Add</button>
         </form>
+        <button id="note-delete" type="button">Delete</button>
         <ul id="notes"></ul>
       </section>
 
